<resources>
    <string name="app_name">Easykino</string>
    <string name="header">Easykino</string>
    <string name="txtv_theatres">Select theatre</string>
    <string name="btn_apply_search">SEARCH</string>
    <string name="txtv_locations">Select location</string>
    <string name="etext_default_date">dd.mm.yyyy</string>
    <string name="date_header">Pick a date</string>
    <string name="start_time_header">Pick starting time</string>
    <string name="end_time_header">Pick ending time</string>
    <string name="show_item_title_text">Movie Title</string>
    <string name="show_item_theatres_title_text">In Theatres:</string>
    <string name="show_item_theatres_text">Kinopalatsi, Helsinki</string>
    <string name="show_item_time_text">Starts at: 10:50</string>
    <string name="movie_name_header_text">Movie name</string>
</resources>
