<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/linlay_search_header"
            android:orientation="vertical"
            android:background="@color/colorPrimary">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtv_search_header"
                    android:textSize="40sp"
                    android:text="@string/header"
                    android:textColor="@color/Gold"
                    android:layout_marginStart="10dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true">
                </TextView>

                <Button
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_close"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/button_shape"
                    android:foreground="@android:drawable/ic_menu_close_clear_cancel"
                    android:elevation="4dp"
                    android:layout_marginHorizontal="15dp"
                    android:translationZ="4dp"
                    android:stateListAnimator="@null">
                </Button>

            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtv_theatre"
            android:textColor="@color/colorTextSecondary"
            android:layout_below="@+id/linlay_search_header"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/txtv_theatres"
            android:textSize="30sp">
        </TextView>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/linlay_search_header"
            android:minHeight="45dp"
            android:minWidth="150dp"
            android:layout_marginTop="60dp"
            android:layout_marginStart="10dp"
            android:id="@+id/spinner_theatres"
            android:popupBackground="@color/colorPrimary"
            android:elevation="5dp"
            android:translationZ="5dp"
            android:background="@color/colorPrimary">
        </Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextSecondary"
            android:layout_below="@+id/spinner_theatres"
            android:layout_marginTop="10dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:text="@string/txtv_locations"
            android:textSize="30sp">
        </TextView>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="150dp"
            android:minHeight="45dp"
            android:layout_below="@+id/spinner_theatres"
            android:layout_marginTop="60dp"
            android:layout_marginStart="10dp"
            android:id="@+id/spinner_locations"
            android:popupBackground="@color/colorPrimary"
            android:elevation="5dp"
            android:translationZ="5dp"
            android:background="@color/colorPrimary">
        </Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextSecondary"
            android:layout_above="@+id/time_picker"
            android:layout_alignTop="@+id/txtv_theatre"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="55dp"
            android:text="@string/time_header"
            android:textSize="30sp">
        </TextView>

        <TimePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/time_picker"
            android:timePickerMode="spinner"
            android:layout_below="@+id/linlay_search_header"
            android:layout_alignTop="@+id/spinner_theatres"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="16dp"
            android:elevation="4dp"
            android:translationZ="4dp">
        </TimePicker>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/date_header"
            android:textColor="@color/colorTextSecondary"
            android:layout_below="@+id/spinner_locations"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/date_header"
            android:textSize="30sp">
        </TextView>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="150dp"
            android:minHeight="50dp"
            android:textAlignment="center"
            android:layout_below="@+id/date_header"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:id="@+id/etext_date"
            android:maxLines="1"
            android:background="@color/colorPrimary"
            android:textSize="25sp"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/etext_default_date"
            android:elevation="5dp"
            android:translationZ="5dp"
            android:maxLength="10">
        </EditText>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="80dp"
            android:id="@+id/btn_apply_search"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:layout_marginHorizontal="40dp"
            android:text="@string/btn_apply_search"
            android:textColor="@color/colorTextPrimary"
            android:background="@drawable/button_shape"
            android:elevation="4dp"
            android:translationZ="4dp"
            android:textSize="30sp"
            android:fontFamily="monospace">
        </Button>



    </RelativeLayout>


</layout>